--- a/index.html
+++ b/index.html
@@ -209,6 +209,34 @@
         </div>
     </section>
 
+    <!-- All Registrations Section -->
+    <section id="allRegistrations" class="all-registrations-section registration-section">
+        <div class="container">
+            <h2>All Registrations</h2>
+            <div class="table-responsive">
+                <table id="registrationsTable" class="registrations-table">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Phone</th>
+                            <th>Email</th>
+                            <th>Gender</th>
+                            <th>Age</th>
+                            <th>Batch</th>
+                            <th>Payment Method</th>
+                            <th>Registration Date</th>
+                        </tr>
+                    </thead>
+                    <tbody id="registrationsTableBody">
+                        <tr>
+                            <td colspan="8" class="loading-message">Loading registrations...</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </section>
+
     <!-- Payment Status Modal -->
     <div id="paymentStatusModal" class="modal">
         <div class="modal-content">
